Fixed EqualsConstraint#isSupportedType